# GMapsScraper

./: .gitignore  README.md  dev_helper.py  documentation.md  main.py  progress_plan.md  pyproject.toml  requirements.txt  standalone_batch_to_excel.py  test_api.py  test_grid_search.py  test_new_api.py  test_v2.py  update_districts.py  update_districts_cli.py
config/: locations.json  settings.py
core/: data_processor.py  scraper.py  storage.py
gmaps_scraper/: __init__.py  __main__.py
gmaps_scraper/config/: locations.json  locationsV2.json  temp.json
gmaps_scraper/core/: data_processor.py  scraper.py  storage.py
gmaps_scraper/utils/: district_updater_ui.py  grid_search.py  helpers.py  logger.py
utils/: grid_search.py  helpers.py  logger.py
web_ui/backend/: main.py  requirements.txt
web_ui/backend/api/models/: location.py  profile.py  scraper.py
web_ui/backend/api/routes/: __init__.py  locations.py  profiles.py  scraper.py  settings.py  websocket.py
web_ui/backend/scraper/: __init__.py
web_ui/backend/scraper/config/: settings.py
web_ui/backend/services/: __init__.py  location_service.py  profile_service.py
web_ui/backend/utils/: integration.py
web_ui/frontend/: package-lock.json  package.json
web_ui/frontend/src/: App.js
web_ui/frontend/src/components/ConfigPanel/: ConfigPanel.js
web_ui/frontend/src/components/Layout/: MainLayout.js
web_ui/frontend/src/hooks/: useLocations.js  useScraper.js  useSettings.js  useWebSocket.js
web_ui/frontend/src/services/: api.js  locationService.js  profileService.js  scraperService.js  settingsService.js
(+4 files in other folders)
